--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,12 +8,8 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <% if logged_in? %>
-          <li>
-            <a href="#"><%= current_user.name %></a>
-            <ul>
-              <li><%= link_to 'Logout', logout_path, method: :delete %></li>
-            </ul>
-          </li>
+          <li class="mr-4"><a class="text-light" href="#"><%= current_user.name %></a></li>
+          <li><%= link_to 'Logout', logout_path, method: :delete, class: 'text-light' %></li>
         <% else %>
         <li class="nav-item"><%= link_to 'Signup', new_user_path, class: 'nav-link' %></li>
         <li class="nav-item"><%= link_to 'Login', login_path, class: 'nav-link' %></li>
