--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,6 +3,6 @@
 <p>タスク：<%= @task.content %></p>
 <p>タスクの状態：<%= @task.status %></p>
 
-<%= link_to '一覧に戻る', tasks_path %>
+<%= link_to '一覧に戻る', root_url %>
 <%= link_to 'このタスクを編集する', edit_task_path(@task) %>
 <%= link_to 'このタスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？'} %>
